# ecoaccounts-indexer

./: .dockerignore  Cargo.toml  README.md  nixpacks.toml  railpack.json  railway.json
.sqlx/: query-3716b2dce115438cf9a4528333990d40b78ca5bb2a40af8d07887e0f0a6b53aa.json  query-6448127a4cedbf2c92d37406e80e23d946886f7b5d7a3de92541379d35f1ed20.json  query-ba0e80f9833c7e19abf9808c23068298d1a386724c4c91ed2cdaaf485eace33f.json
core/: Cargo.toml  README.md  build.rs  nixpacks.toml
core/sql/: CreateSuperAccountBadges.sql  CreateVaultsTransactionsTable.sql
core/src/: api.rs  indexer.rs  lib.rs  resilience.rs  strategies.rs
dashboard/: .env.example  README.md  package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css
prosperity_account/: Cargo.toml  ENV_VARS.md
prosperity_account/.sqlx/: query-992f9ed9f09dd98908ae63cd0e181d701e8efe2c226e1356933710a96ce01447.json
prosperity_account/src/: config.rs  main.rs
prosperity_account/src/contracts/: celo.rs  mod.rs  st_celo_manager.rs  super_chain_module.rs
prosperity_account/src/strategies/:  mod.rs  mod.rs  owner_added.rs  prosperity_account_created.rs  vaults_transactions_stcelo.rs
sql/: CreateIndexedRangesTable.sql  CreateSuperAccountsTable.sql
src/: db.rs  indexer.rs  main.rs
src/contracts/: comet.rs  mod.rs  regenerative_vaults.rs  st_celo.rs
src/strategies/: mod.rs  super_account_created.rs  vaults_transactions_compound.rs  (+1 more)
super_accounts/: Cargo.toml  ENV_VARS.md
super_accounts/src/: config.rs  main.rs
super_accounts/src/contracts/: mod.rs  super_chain_badges.rs  super_chain_module.rs
super_accounts/src/strategies/: badges_minted.rs  mod.rs  owner_added.rs  super_account_created.rs  vaults_transactions_compound.rs
(+4 files in other folders)
