[package]
name = "superchain-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.25", features = ["full"] }
eyre = "0.6.12"
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
indicatif = "0.17"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "bigdecimal", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = "0.4.41"

