[package]
name = "prosperity_account"
version = "0.1.0"
edition = "2024"

[dependencies]
indexer_core = { path = "../core" }
alloy = { version = "1.0.25", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "bigdecimal", "chrono"] }
futures-util = "0.3.31"
async-trait = "0.1"
tracing = "0.1"
dotenv = "0.15"
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"