[package]
name = "super_accounts"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
alloy = { version = "1.0.25", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = "0.1"
dotenv = "0.15"
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"